objects/tffa__ApplicationDecisionMatrix__c.object
<CustomObject>
    <description>A decision matrix lists down business rule conditions (causes) and actions (effects), represented as a matrix where each row represents a unique combination. In ApplicationDecisionMatrix, the action is a decision outcome - APPROVED, DECLINED, etc related to Application.status. It controls future status flows (behaviour) of the Application. e.g. if outcome is DECLINED, Application is marked DECLINED and all processing is terminated, if outcome is REVIEW, manual
        intervention may be required for further processing, etc. The conditions that make up the causes can include - party attributes like PartyRole, IsPartyMinor or KYC check reponses like IDVStatus, DebitBureauScore, and application attributes like Product. ApplicationDecisionMatrix also supports additional outcomes in the form of CounterOfferItem(s), applicable when the outcome is COUNTER_OFFER.</description>
    <fields>
        <fullName>CZAssignToQueue__c</fullName>
        <description>Assign To Queue</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Assign To Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZFraudStatus__c</fullName>
        <description>Fraud Status</description>
        <label>Fraud Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZPartyDecisionOutcome__c</fullName>
        <description>Party Decision Outcome</description>
        <label>Party Decision Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargeAmountExceeded__c</fullName>
        <description>Charge Amount Exceeded?</description>
        <label>Charge Amount Exceeded?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExistingCustomerDOBMatch__c</fullName>
        <description>Is DOB entered by Customer same as in FIS?</description>
        <label>Existing Customer DOB Match?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExistingCustomerLastNameMatch__c</fullName>
        <description>Is Last Name entered by Customer same as in FIS?</description>
        <label>Existing Customer Last Name Match ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDAStatus__c</fullName>
        <description>IDA Status</description>
        <label>IDA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InquiryCountExceeded__c</fullName>
        <description>Inquiry Count Exceeded?</description>
        <label>Inquiry Count Exceeded?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsAuthenticatedCustomer__c</fullName>
        <description>Is Authenticated Customer</description>
        <label>Is Authenticated Customer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsAuthenticatedFlow__c</fullName>
        <description>Is Authenticated Flow</description>
        <inlineHelpText>If any other applicant in the submission is authenticated</inlineHelpText>
        <label>Is Authenticated Flow?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsDobMatch__c</fullName>
        <description>Is DOB Match in IDV?</description>
        <label>DOB Match in IDV?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsExistingCustomer__c</fullName>
        <description>Is Existing Cutomer</description>
        <label>Is Existing Customer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsIDUploaded__c</fullName>
        <description>Is ID Uploaded?</description>
        <label>Is ID Uploaded?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsKYCRequired__c</fullName>
        <description>Is KYC Required</description>
        <label>Is KYC Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsMinor__c</fullName>
        <description>Is Minor</description>
        <label>Is Minor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsPrimaryApplicant__c</fullName>
        <description>Is Primary Applicant</description>
        <label>Is Primary Applicant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsRejectedWithFraudReasons__c</fullName>
        <description>If KYC was rejected with some Fraud reject Reasons.</description>
        <label>KYC Rejected with Fraud Reason?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsSsnMatch__c</fullName>
        <description>Is SSN Match in IDV?</description>
        <label>SSN Match in IDV?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsStudentProduct__c</fullName>
        <description>Is Student Product</description>
        <label>Is Student Product?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__YesNoOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OFACStatus__c</fullName>
        <description>OFAC status</description>
        <label>OFAC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <description>Occupation (Employment type from employment object) of the applicant</description>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EmploymentType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AdverseActionNoticeRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, a notice is sent out (via email) to the related Parties if the Application is declined.</description>
        <label>Adverse action notice required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AmountFrom__c</fullName>
        <description>Requested amount for lending application. Sets the lower bound.</description>
        <label>Amount (from)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__AmountTo__c</fullName>
        <description>Requested amount for lending application. Sets the upper bound.</description>
        <label>Amount (to)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__BrandCodeSet__c</fullName>
        <description>The brand code under which the application was started. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;123;456;</inlineHelpText>
        <label>Brand code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BundleCodeSet__c</fullName>
        <description>Unique product bundle code maintained in the system as a fact. Supports multiple values (semicolon separated)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;BUNDLECHECKING;</inlineHelpText>
        <label>Bundle code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CreditBureauScoreFrom__c</fullName>
        <description>Score given by a credit bureau (e.g. Equifax, TransUnion) to the primary party. It is a reflection of the party&apos;s credit worthiness. Sets the lower limit.</description>
        <label>Credit bureau score (from)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__CreditBureauScoreTo__c</fullName>
        <description>Score given by a credit bureau (e.g. Equifax, TransUnion) to the primary party. It is a reflection of the party&apos;s credit worthiness. Sets the upper limit.</description>
        <label>Credit bureau score (to)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__DebitBureauReasonCodeSet__c</fullName>
        <description>Supplements the DebitBureauScore of primary party. A semicolon delimited list of reason codes. Each code may be looked up for additional understanding of the score.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Debit bureau reason code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DebitBureauScoreFrom__c</fullName>
        <description>Score given by a debit bureau (e.g. ChexSystems) to the primary party. e.g. QualiFile score. A measure of risk associated with the party. Sets the lower limit.</description>
        <label>Debit bureau score (from)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__DebitBureauScoreTo__c</fullName>
        <description>Score given by a debit bureau (e.g. ChexSystems) to the primary party. e.g. QualiFile score. A measure of risk associated with the party. Sets the upper limit.</description>
        <label>Debit bureau score (to)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__DebitBureauStatus__c</fullName>
        <description>Debit Bureau status of the primary party.</description>
        <label>Debit Bureau status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DecisionStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Champion/Challenger strategy to which this record belongs. Used in Champion/Challenger testing.</description>
        <label>Decision Strategy</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Strategies configured for Application Decision Matrix can only be selected.</errorMessage>
            <filterItems>
                <field>tffa__DecisionStrategy__c.tffa__Configuration__r.tffa__EntityType__c</field>
                <operation>equals</operation>
                <value>ApplicationDecisionMatrix</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__DecisionStrategy__c</referenceTo>
        <relationshipLabel>Application Decision Matrices</relationshipLabel>
        <relationshipName>ApplicationDecisionMatrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Explains the rule, giving some context about why the rule conditions (facts) lead to the rule action (outcome).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IDVStatus__c</fullName>
        <description>ID Verification status of the primary party.</description>
        <label>IDV status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Outcome__c</fullName>
        <description>The prescribed action if the business rule conditions (represented by fields in the Facts fieldSet) are satisfied.</description>
        <label>Outcome</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyRole__c</fullName>
        <description>The role played by the primary party in the bank - CUSTOMER, PROSPECT.</description>
        <label>Party role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyType__c</fullName>
        <description>Type of the primary party. e.g. INDIVIDUAL, ORGANIZATION</description>
        <label>Party type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCategorySet__c</fullName>
        <description>Product category of associated application. A fact. Supports multiple values.</description>
        <label>Product category (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCategory__c</fullName>
        <description>Product category as a fact.</description>
        <label>Product category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Product as a fact.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product not valid.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>ApplicationDecisionMatrices</relationshipLabel>
        <relationshipName>ApplicationDecisionMatrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Defines the relative order of records. Useful when making a selection from possible matches representing the output of an evaluation. In such cases, records with lower SortOrder values are selected.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__TermFrom__c</fullName>
        <description>Requested term for lending application. Sets the lower bound.</description>
        <label>Term (from)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__TermTo__c</fullName>
        <description>Requested term for lending application. Sets the upper bound.</description>
        <label>Term (to)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of decisioning. Groups rule conditions and actions, such that each set may apply only when that type of decisioning is requested. e.g. KYC</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationDecisionType</valueSetName>
        </valueSet>
    </fields>
    <label>Application Decision Matrix</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Type__c</columns>
        <columns>tffa__Description__c</columns>
        <columns>tffa__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__CREDIT</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__CreditBureauScoreFrom__c</columns>
        <columns>tffa__CreditBureauScoreTo__c</columns>
        <columns>tffa__Product__c</columns>
        <columns>tffa__ProductCategory__c</columns>
        <columns>tffa__Outcome__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>CREDIT</value>
        </filters>
        <label>Credit</label>
    </listViews>
    <listViews>
        <fullName>tffa__KYC</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>ExistingCustomerDOBMatch__c</columns>
        <columns>tffa__Description__c</columns>
        <columns>CZPartyDecisionOutcome__c</columns>
        <columns>tffa__Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>KYC</value>
        </filters>
        <label>KYC</label>
    </listViews>
    <nameField>
        <displayFormat>ADM-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Decision Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>tffa__DecisionStrategy</fullName>
        <active>true</active>
        <description>Applies validations around DecisionStrategy field
1.  entityPurpose of strategy must match type</description>
        <errorConditionFormula>NOT(ISBLANK(tffa__DecisionStrategy__c)) &amp;&amp; TEXT(tffa__DecisionStrategy__r.tffa__Configuration__r.tffa__EntityPurpose__c) &lt;&gt; TEXT(tffa__Type__c)</errorConditionFormula>
        <errorDisplayField>tffa__DecisionStrategy__c</errorDisplayField>
        <errorMessage>Decision Strategy purpose must match the Application Decision Matrix type.</errorMessage>
    </validationRules>
</CustomObject>